<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/viewOuter"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@drawable/s_shape_curve"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_email"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_loginMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/orange"
        android:padding="10dp"
        android:text="Made with Love - Every Meal Matters"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_welcome"
        app:layout_constraintEnd_toStartOf="@+id/viewOuter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/proxima_nova_font"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewOuter"
        android:fontFamily="@font/proxima_nova_font"
        android:text="@string/welcome_to"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="200dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewOuter"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="Email or Phone"
        android:textStyle="bold"
        android:textColorHint="@color/orange"
        android:fontFamily="@font/proxima_nova_font" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewOuter"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="Password"
        android:textStyle="bold"
        android:textColorHint="@color/orange"
        android:fontFamily="@font/proxima_nova_font" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgotpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewOuter"
        android:fontFamily="@font/proxima_nova_font"
        android:text="@string/forgot_to"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:padding="6dp"
        android:textAlignment="textEnd"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgotpassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewOuter"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/proxima_nova_font"
        android:backgroundTint="@color/orange"
        android:text="@string/SignIn"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_signInWith"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewOuter"
        android:text="@string/sign_in_with"
        android:fontFamily="@font/proxima_nova_font"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_signInWith"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewOuter"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/proxima_nova_font"
        android:background="@color/orange"
        android:text="@string/otp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/proxima_nova_font"
        android:text="@string/dont_have_account_signUp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/viewOuter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>
