<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/proxima_nova_font"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/profile"
        android:padding="10dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_profileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="Deepak"
        android:fontFamily="@font/proxima_nova_font"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:textAllCaps="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_profileMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_profileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="2dp"
        android:text="8094949494 . Lucifer@gmail.com"
        android:fontFamily="@font/proxima_nova_font"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_editProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_profileMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/edit_profile"
        android:fontFamily="@font/proxima_nova_font"
        android:layout_marginHorizontal="10dp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:paddingVertical="8dp"
        android:textSize="16sp"/>

    <View
        android:id="@+id/View_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_editProfile"
        android:background="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_manageAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/View_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_manageAccountArrow"
        android:fontFamily="@font/proxima_nova_font"
        android:text="@string/manage_Account"
        android:textSize="22sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:padding="7dp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_manageAccountArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/View_line"
        app:layout_constraintStart_toEndOf="@+id/tv_manageAccount"
        app:layout_constraintEnd_toEndOf="parent"
        android:text=">"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:padding="7dp"
        android:fontFamily="@font/proxima_nova_font"
        android:textSize="22sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_termNcondition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_manageAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_termNconditionArrow"
        android:fontFamily="@font/proxima_nova_font"
        android:text="@string/term_N_cond"
        android:textSize="22sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:padding="7dp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_termNconditionArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_manageAccount"
        app:layout_constraintStart_toEndOf="@+id/tv_termNcondition"
        app:layout_constraintEnd_toEndOf="parent"
        android:text=">"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:padding="7dp"
        android:fontFamily="@font/proxima_nova_font"
        android:textSize="22sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_Logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_termNcondition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_logoutArrow"
        android:fontFamily="@font/proxima_nova_font"
        android:text="@string/logout"
        android:textSize="22sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:padding="7dp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_logoutArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_termNcondition"
        app:layout_constraintStart_toEndOf="@+id/tv_Logout"
        app:layout_constraintEnd_toEndOf="parent"
        android:text=">"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:padding="7dp"
        android:fontFamily="@font/proxima_nova_font"
        android:textSize="22sp"/>



</androidx.constraintlayout.widget.ConstraintLayout>