<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkoutToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/orange_light"
        app:title="@string/checkout"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/proxima_nova_font"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/checkout"
        android:padding="10dp"
        />
    <View
        android:id="@+id/viewOuter"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@drawable/s_shape_curve"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CheckOutRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Card_billSummary" />

    <androidx.cardview.widget.CardView
        android:id="@+id/Card_billSummary"
        app:layout_constraintTop_toBottomOf="@+id/CheckOutRecyclerView"
        app:layout_constraintBottom_toTopOf="@+id/btn_CheckOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_totalAmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="7dp"
                android:text="@string/item_total"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/proxima_nova_font"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_GSTAmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_totalAmt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="7dp"
                android:text="GST and Resturant Charges : 50.00 "
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/proxima_nova_font"/>

            <View
                android:id="@+id/View_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_GSTAmt"
                android:background="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_grandAmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/View_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="7dp"
                android:text="@string/to_pay"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/proxima_nova_font"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_CheckOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Card_billSummary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_Cash"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="10dp"
        android:text="@string/checkout"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/proxima_nova_font"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Cash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_UPI"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cash"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/proxima_nova_font"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_UPI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_Cash"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="18dp"
        android:text="@string/upi"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/proxima_nova_font"
        android:textColor="@color/white"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
